[package]
name = "value_after_table"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.101"
serde_json = "1.0.40"
toml = "0.5.3"
serde-transcode = "1.1.0"
